# check-dependencies

./: -  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  action.yml  code-review-instructions.md  fail_check.py  pyproject.toml  review.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pylint.yml  pytest.yml  python.yml  static-code-check.yml
.out/: coverage.xml
src/check_dependencies/: __init__.py  __main__.py  app_config.py  builtin_module.py  lib.py  main.py  mapping.py  outputs.py  provides.py  pyproject_toml.py  writer.py
src/check_dependencies/writer/: __init__.py  __main__.py  cli.py  provides.py
src/tests/: check-dependencies.toml  conftest.py  test_app_config.py  test_builtin_modules.py  test_lib.py  test_main.py  test_mapping.py  test_provides.py  test_pyproject_toml.py  test_writer.py
src/tests/data/: pyproject_cfg.toml  pyproject_empty.toml  pyproject_hatch_extra.toml  pyproject_pep631.toml  pyproject_pep631_provides.toml  pyproject_poetry_extra.toml  pyproject_poetry_test.toml  pyproject_uv_legacy_extra.toml  src.py  src2.py  src_unicode.py
src/tests/data/src/: src2.py
src/tests/mapping/: pyvenv.cfg
src/tests/writer/: __init__.py  test_main.py  test_provides.py
tests/: check-dependencies.toml  conftest.py  test_app_config.py  test_builtin_modules.py  test_lib.py  test_main.py  test_outputs.py  test_pyproject_toml.py  test_writer.py
tests/data/: pyproject_empty.toml  pyproject_hatch.toml  pyproject_hatch_extra.toml  pyproject_pep631_extra.toml  pyproject_pep631_provides.toml  pyproject_poetry.toml  pyproject_poetry_extra.toml  pyproject_unicode.toml  pyproject_uv_legacy.toml
tests/data/src/: src.py  src_dynamic_import.py
